src/test/compile-fail/dup-link-name.rs
// xfail-stage0
// error-pattern:duplicate meta item `name`

#[link(name = "test",
       name)];

fn main() {}